[gd_scene load_steps=4 format=3 uid="uid://mckt2rghitr2"]

[ext_resource type="Theme" uid="uid://cnjgupux4sfnr" path="res://Textures/UItextures/ui.tres" id="1_2f2j0"]
[ext_resource type="Script" path="res://Scenes/UI/VendorUI/vendor_item.gd" id="2_rjk16"]
[ext_resource type="Texture2D" uid="uid://ctrdyl7hvp2po" path="res://Sprites/Weapons/Swords/Swords.png" id="3_4j7h7"]

[node name="ItemContainer" type="Control"]
texture_filter = 1
custom_minimum_size = Vector2(200, 200)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -952.0
offset_bottom = -448.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_2f2j0")
script = ExtResource("2_rjk16")

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
initial_position = 2
size = Vector2i(504, 128)
borderless = true
dialog_text = "Do you want to buy this item?"

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.991004, 0.997438)

[node name="HBoxContainer" type="VBoxContainer" parent="Button"]
custom_minimum_size = Vector2(150, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -75.0
offset_right = 80.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpriteContainer" type="Control" parent="Button/HBoxContainer"]
custom_minimum_size = Vector2(96, 96)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 1

[node name="ItemSprite" type="Sprite2D" parent="Button/HBoxContainer/SpriteContainer"]
texture_filter = 1
scale = Vector2(3, 3)
texture = ExtResource("3_4j7h7")
centered = false
hframes = 16
vframes = 19

[node name="Name" type="Label" parent="Button/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 7
text = "Durendalia"
horizontal_alignment = 1

[node name="Price" type="Label" parent="Button/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/outline_size = 0
theme_override_constants/shadow_outline_size = 5
text = "50"
horizontal_alignment = 1

[connection signal="canceled" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
